<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".User.LoginActivity">

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:src="@drawable/hired_icon"
            android:textAlignment="center"
            android:transitionName="main_logo" />

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_black"
            android:text="Sign In"
            android:textColor="#000"
            android:textSize="32sp"
            android:transitionName="header_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="Email Address"
                android:hint="@string/email"
                android:transitionName="email_trans">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="Password"
                android:hint="@string/password"
                android:transitionName="password_trans"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:id="@+id/remember_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:text="Remember Me"

                    android:textColor="@color/black"
                    android:textAllCaps="true"
                    android:fontFamily="sans-serif-medium"/>

                <Button
                    android:id="@+id/goto_forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Forgot Password?"
                    android:background="#00000000"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-medium"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

<!--            <Button-->
<!--                android:id="@+id/goto_forgot"-->
<!--                android:layout_width="200dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="right"-->
<!--                android:layout_margin="5dp"-->
<!--                android:background="#00000000"-->
<!--                android:elevation="0dp"-->
<!--                android:fontFamily="sans-serif-medium"-->
<!--                android:text="@string/forgot_password"-->
<!--                android:textColor="@color/black" />-->

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#000"
                android:text="@string/sign_in"
                android:fontFamily="@font/muli_black"
                android:textColor="#fff"
                android:transitionName="button_trans" />

            <Button
                android:id="@+id/goto_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="#00000000"
                android:elevation="0dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/new_user_register_here"
                android:textColor="#000"
                android:transitionName="goto_trans" />


        </LinearLayout>

    </LinearLayout>
</ScrollView>